// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildColumns parses minimal exp show output with all schema types 1`] = `
Array [
  Array [
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "params",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 6,
              "name": "mixedparam",
              "types": Array [
                "number",
                "string",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 5,
              "name": "boolparam",
              "types": Array [
                "boolean",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 6,
              "name": "stringparam",
              "types": Array [
                "string",
              ],
            },
          ],
          "name": "params.yaml",
        },
      ],
      "name": "params",
    },
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "metrics",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 6,
              "name": "acc",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 18,
              "name": "loss",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 1,
              "name": "step",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 4,
              "name": "boolparam",
              "types": Array [
                "boolean",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "logs.json",
              ],
              "maxStringLength": 4,
              "name": "nullparam",
              "types": Array [
                "null",
              ],
            },
          ],
          "name": "logs.json",
        },
      ],
      "name": "metrics",
    },
  ],
  Array [
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 6,
      "name": "mixedparam",
      "types": Array [
        "number",
        "string",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 5,
      "name": "boolparam",
      "types": Array [
        "boolean",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 6,
      "name": "stringparam",
      "types": Array [
        "string",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 6,
      "name": "acc",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 18,
      "name": "loss",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 1,
      "name": "step",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 4,
      "name": "boolparam",
      "types": Array [
        "boolean",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "logs.json",
      ],
      "maxStringLength": 4,
      "name": "nullparam",
      "types": Array [
        "null",
      ],
    },
  ],
]
`;

exports[`buildColumns parses the complex exp show properly 1`] = `
Array [
  Array [
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "params",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 1,
              "name": "epochs",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 6,
              "name": "learning_rate",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 8,
              "name": "dvc_logs_dir",
              "types": Array [
                "string",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 8,
              "name": "log_file",
              "types": Array [
                "string",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "maxStringLength": 5,
              "name": "dropout",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "params",
                "params.yaml",
              ],
              "childColumns": Array [
                Object {
                  "ancestors": Array [
                    "params",
                    "params.yaml",
                    "process",
                  ],
                  "maxStringLength": 4,
                  "name": "threshold",
                  "types": Array [
                    "number",
                  ],
                },
                Object {
                  "ancestors": Array [
                    "params",
                    "params.yaml",
                    "process",
                  ],
                  "maxStringLength": 6,
                  "name": "test_arg",
                  "types": Array [
                    "string",
                    "number",
                  ],
                },
              ],
              "name": "process",
            },
          ],
          "name": "params.yaml",
        },
      ],
      "name": "params",
    },
    Object {
      "childColumns": Array [
        Object {
          "ancestors": Array [
            "metrics",
          ],
          "childColumns": Array [
            Object {
              "ancestors": Array [
                "metrics",
                "summary.json",
              ],
              "maxStringLength": 18,
              "name": "loss",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "summary.json",
              ],
              "maxStringLength": 19,
              "name": "accuracy",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "summary.json",
              ],
              "maxStringLength": 18,
              "name": "val_loss",
              "types": Array [
                "number",
              ],
            },
            Object {
              "ancestors": Array [
                "metrics",
                "summary.json",
              ],
              "maxStringLength": 19,
              "name": "val_accuracy",
              "types": Array [
                "number",
              ],
            },
          ],
          "name": "summary.json",
        },
      ],
      "maxStringLength": 9,
      "name": "metrics",
      "types": Array [
        "undefined",
      ],
    },
  ],
  Array [
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 1,
      "name": "epochs",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 6,
      "name": "learning_rate",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 8,
      "name": "dvc_logs_dir",
      "types": Array [
        "string",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 8,
      "name": "log_file",
      "types": Array [
        "string",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
      ],
      "maxStringLength": 5,
      "name": "dropout",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
        "process",
      ],
      "maxStringLength": 4,
      "name": "threshold",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "params",
        "params.yaml",
        "process",
      ],
      "maxStringLength": 6,
      "name": "test_arg",
      "types": Array [
        "string",
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "summary.json",
      ],
      "maxStringLength": 18,
      "name": "loss",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "summary.json",
      ],
      "maxStringLength": 19,
      "name": "accuracy",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "summary.json",
      ],
      "maxStringLength": 18,
      "name": "val_loss",
      "types": Array [
        "number",
      ],
    },
    Object {
      "ancestors": Array [
        "metrics",
        "summary.json",
      ],
      "maxStringLength": 19,
      "name": "val_accuracy",
      "types": Array [
        "number",
      ],
    },
  ],
]
`;
